--- a/Top5_voyage.html
+++ b/Top5_voyage.html
@@ -36,6 +36,6 @@
 
 	   <h1 class="continent">TOP 5 : ITALIE</h1>
 
-	<p class="avantages">L'Italie séduit les voyageurs avec sa riche histoire, sa cuisine délicieuse et son art incomparable. Des canaux romantiques de Venise aux ruines de Rome, en passant par les paysages idylliques de la Toscane, l'Italie offre une expérience culturelle et esthétique inoubliable. Chacun de ces pays a quelque chose de spécial à offrir, que ce soit sur le plan culturel, historique, culinaire ou naturel. Les voyageurs du monde entier sont attirés par la diversité et la beauté de ces destinations, contribuant ainsi à les maintenir au sommet de la liste des endroits les plus visités au monde.</p>
+	 <p class="activite1">L'Italie séduit les voyageurs avec sa riche histoire, sa cuisine délicieuse et son art incomparable. Des canaux romantiques de Venise aux ruines de Rome, en passant par les paysages idylliques de la Toscane, l'Italie offre une expérience culturelle et esthétique inoubliable. Chacun de ces pays a quelque chose de spécial à offrir, que ce soit sur le plan culturel, historique, culinaire ou naturel. Les voyageurs du monde entier sont attirés par la diversité et la beauté de ces destinations, contribuant ainsi à les maintenir au sommet de la liste des endroits les plus visités au monde.</p>
 
 	
