--- a/Top5_voyage.html
+++ b/Top5_voyage.html
@@ -38,4 +38,19 @@
 
 	 <p class="activite1">L'Italie séduit les voyageurs avec sa riche histoire, sa cuisine délicieuse et son art incomparable. Des canaux romantiques de Venise aux ruines de Rome, en passant par les paysages idylliques de la Toscane, l'Italie offre une expérience culturelle et esthétique inoubliable. Chacun de ces pays a quelque chose de spécial à offrir, que ce soit sur le plan culturel, historique, culinaire ou naturel. Les voyageurs du monde entier sont attirés par la diversité et la beauté de ces destinations, contribuant ainsi à les maintenir au sommet de la liste des endroits les plus visités au monde.</p>
 
-	
+<h1 class="continent">TOP 4 : Turquie</h1>
+
+	 <p class="activite1">La Turquie, pont entre l'Europe et l'Asie, regorge de sites historiques fascinants tels que la basilique Sainte-Sophie à Istanbul et les ruines antiques d'Éphèse. Les plages de la côte égéenne et la magie des montagnes de la Cappadoce ajoutent une dimension unique à cette destination. Istanbul : Une ville unique où l'Est rencontre l'Ouest, avec des marchés animés, des bains turcs et des monuments historiques tels que la basilique Sainte-Sophie. Côte égéenne : Des plages pittoresques, des vestiges antiques et des villages côtiers charmants offrent une escapade paisible.</p>
+
+<h1 class="continent">TOP 3 : États-Unis</h1>
+
+	 <p class="activite1">Les États-Unis sont une terre d'opportunités de voyage infinies. Des gratte-ciels imposants de New York aux parcs nationaux majestueux comme le Grand Canyon, en passant par les plages ensoleillées de la Floride, les États-Unis offrent une variété de paysages, de cultures et d'expériences pour tous les goûts. New York City : La ville qui ne dort jamais offre des gratte-ciels impressionnants, des théâtres de Broadway et une diversité culturelle incomparable. Grand Canyon : Un site naturel spectaculaire, offrant des vues à couper le souffle et des opportunités de randonnée inoubliables. Floride : Des parcs d'attractions à Orlando aux plages de sable blanc de Miami, la Floride propose une variété d'expériences de voyage.</p>
+
+		 
+<h1 class="continent">TOP 2 : Espagne</h1>
+
+	 <p class="activite1">L'Espagne offre une combinaison unique de tradition et de modernité. Les villes animées comme Barcelone et Madrid sont riches en culture, en histoire et en vie nocturne. Les plages ensoleillées de la Costa del Sol et les sites historiques comme l'Alhambra à Grenade font de l'Espagne une destination diversifiée et appréciée. Barcelone : Connue pour l'architecture de Gaudí, ses plages animées et sa vie nocturne vibrante. Madrid : La capitale espagnole regorge de musées de renommée mondiale, de parcs majestueux et d'une cuisine délicieuse. Costa del Sol : Des plages ensoleillées et des stations balnéaires prisées, notamment Marbella, font de cette région un paradis pour les amoureux du soleil.</p>
+
+	<h1 class="continent">TOP 1 : France</h1>
+
+	 <p class="activite1"> La France est renommée pour sa romance, sa cuisine raffinée, son art et son architecture élégante. Des attractions emblématiques comme la Tour Eiffel à Paris, les vignobles de la région de Bordeaux, les plages de la Côte d'Azur et les châteaux de la vallée de la Loire attirent des millions de visiteurs chaque année. Paris et la Tour Eiffel : La capitale française est célèbre pour ses avenues élégantes, ses musées renommés tels que le Louvre, et bien sûr, la Tour Eiffel, l'un des monuments les plus emblématiques du monde. Provence et la Côte d'Azur : La région méditerranéenne offre des paysages pittoresques, des marchés colorés et des champs de lavande. Nice, Cannes et Saint-Tropez attirent les amateurs de soleil et de glamour.</p>    
